// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`cell reducer > can initialize stdin 1`] = `
{
  "code": "",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [],
  "debuggerActive": false,
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": null,
  "lastExecutionTime": null,
  "lastRunStartTimestamp": null,
  "name": "_",
  "outline": null,
  "output": null,
  "runElapsedTimeMs": null,
  "runStartTimestamp": null,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "idle",
  "stopped": false,
}
`;

exports[`cell reducer > can initialize stdin 2`] = `
{
  "code": "",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [],
  "debuggerActive": false,
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "",
  "lastExecutionTime": null,
  "lastRunStartTimestamp": null,
  "name": "_",
  "outline": null,
  "output": null,
  "runElapsedTimeMs": null,
  "runStartTimestamp": null,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "queued",
  "stopped": false,
}
`;

exports[`cell reducer > can initialize stdin 3`] = `
{
  "code": "",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [],
  "debuggerActive": false,
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "",
  "lastExecutionTime": null,
  "lastRunStartTimestamp": null,
  "name": "_",
  "outline": null,
  "output": null,
  "runElapsedTimeMs": null,
  "runStartTimestamp": null,
  "serialization": undefined,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "queued",
  "stopped": false,
}
`;

exports[`cell reducer > can initialize stdin 4`] = `
{
  "code": "",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [],
  "debuggerActive": false,
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "",
  "lastExecutionTime": null,
  "lastRunStartTimestamp": 20,
  "name": "_",
  "outline": null,
  "output": null,
  "runElapsedTimeMs": null,
  "runStartTimestamp": 20,
  "serialization": undefined,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "running",
  "stopped": false,
}
`;

exports[`cell reducer > can initialize stdin 5`] = `
{
  "code": "",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [
    {
      "channel": "stdout",
      "data": "hello!",
      "mimetype": "text/plain",
      "timestamp": 1,
    },
  ],
  "debuggerActive": false,
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "",
  "lastExecutionTime": null,
  "lastRunStartTimestamp": 20,
  "name": "_",
  "outline": null,
  "output": null,
  "runElapsedTimeMs": null,
  "runStartTimestamp": 20,
  "serialization": undefined,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "running",
  "stopped": false,
}
`;

exports[`cell reducer > can initialize stdin 6`] = `
{
  "code": "",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [
    {
      "channel": "stdout",
      "data": "hello!",
      "mimetype": "text/plain",
      "timestamp": 1,
    },
  ],
  "debuggerActive": false,
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "",
  "lastExecutionTime": null,
  "lastRunStartTimestamp": 20,
  "name": "_",
  "outline": null,
  "output": null,
  "runElapsedTimeMs": null,
  "runStartTimestamp": 20,
  "serialization": undefined,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "running",
  "stopped": false,
}
`;

exports[`cell reducer > can initialize stdin 7`] = `
{
  "code": "",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [
    {
      "channel": "stdout",
      "data": "hello!",
      "mimetype": "text/plain",
      "timestamp": 1,
    },
    {
      "channel": "stdin",
      "data": "what is your name?",
      "mimetype": "text/plain",
      "timestamp": 2,
    },
  ],
  "debuggerActive": false,
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "",
  "lastExecutionTime": null,
  "lastRunStartTimestamp": 20,
  "name": "_",
  "outline": null,
  "output": null,
  "runElapsedTimeMs": null,
  "runStartTimestamp": 20,
  "serialization": undefined,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "running",
  "stopped": false,
}
`;

exports[`cell reducer > can initialize stdin 8`] = `
{
  "code": "",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [
    {
      "channel": "stdout",
      "data": "hello!",
      "mimetype": "text/plain",
      "timestamp": 1,
    },
    {
      "channel": "stdin",
      "data": "what is your name?",
      "mimetype": "text/plain",
      "response": "Marimo!",
      "timestamp": 2,
    },
  ],
  "debuggerActive": false,
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "",
  "lastExecutionTime": null,
  "lastRunStartTimestamp": 20,
  "name": "_",
  "outline": null,
  "output": null,
  "runElapsedTimeMs": null,
  "runStartTimestamp": 20,
  "serialization": undefined,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "running",
  "stopped": false,
}
`;

exports[`cell reducer > can initialize stdin 9`] = `
{
  "code": "",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [
    {
      "channel": "stdout",
      "data": "hello!",
      "mimetype": "text/plain",
      "timestamp": 1,
    },
    {
      "channel": "stdin",
      "data": "what is your name?",
      "mimetype": "text/plain",
      "response": "Marimo!",
      "timestamp": 2,
    },
    {
      "channel": "stdin",
      "data": "how old are you?",
      "mimetype": "text/plain",
      "timestamp": 3,
    },
  ],
  "debuggerActive": false,
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "",
  "lastExecutionTime": null,
  "lastRunStartTimestamp": 20,
  "name": "_",
  "outline": null,
  "output": null,
  "runElapsedTimeMs": null,
  "runStartTimestamp": 20,
  "serialization": undefined,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "running",
  "stopped": false,
}
`;

exports[`cell reducer > can receive console when the cell is idle and will clear when starts again 1`] = `
{
  "code": "",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [],
  "debuggerActive": false,
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": null,
  "lastExecutionTime": null,
  "lastRunStartTimestamp": null,
  "name": "_",
  "outline": null,
  "output": null,
  "runElapsedTimeMs": null,
  "runStartTimestamp": null,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "idle",
  "stopped": false,
}
`;

exports[`cell reducer > can receive console when the cell is idle and will clear when starts again 2`] = `
{
  "code": "",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [
    {
      "channel": "stdout",
      "data": "hello!",
      "mimetype": "text/plain",
      "timestamp": 1,
    },
  ],
  "debuggerActive": false,
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "",
  "lastExecutionTime": null,
  "lastRunStartTimestamp": null,
  "name": "_",
  "outline": null,
  "output": null,
  "runElapsedTimeMs": null,
  "runStartTimestamp": null,
  "serialization": undefined,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "queued",
  "stopped": false,
}
`;

exports[`cell reducer > can receive console when the cell is idle and will clear when starts again 3`] = `
{
  "code": "",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [
    {
      "channel": "stdout",
      "data": "hello!",
      "mimetype": "text/plain",
      "timestamp": 1,
    },
  ],
  "debuggerActive": false,
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "",
  "lastExecutionTime": null,
  "lastRunStartTimestamp": null,
  "name": "_",
  "outline": null,
  "output": null,
  "runElapsedTimeMs": null,
  "runStartTimestamp": null,
  "serialization": undefined,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "queued",
  "stopped": false,
}
`;

exports[`cell reducer > can receive console when the cell is idle and will clear when starts again 4`] = `
{
  "code": "",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [],
  "debuggerActive": false,
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "",
  "lastExecutionTime": null,
  "lastRunStartTimestamp": 20,
  "name": "_",
  "outline": null,
  "output": null,
  "runElapsedTimeMs": null,
  "runStartTimestamp": 20,
  "serialization": undefined,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "running",
  "stopped": false,
}
`;

exports[`cell reducer > can receive console when the cell is idle and will clear when starts again 5`] = `
{
  "code": "",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [
    {
      "channel": "stdin",
      "data": "hello again!",
      "mimetype": "text/plain",
      "timestamp": 2,
    },
  ],
  "debuggerActive": false,
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "",
  "lastExecutionTime": null,
  "lastRunStartTimestamp": 20,
  "name": "_",
  "outline": null,
  "output": null,
  "runElapsedTimeMs": 2000,
  "runStartTimestamp": null,
  "serialization": undefined,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "idle",
  "stopped": false,
}
`;

exports[`cell reducer > can run a stale cell 1`] = `
{
  "code": "mo.slider()",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [],
  "debuggerActive": false,
  "edited": false,
  "errored": false,
  "id": "1",
  "interrupted": false,
  "lastCodeRun": "mo.slider()",
  "lastExecutionTime": null,
  "lastRunStartTimestamp": null,
  "name": "_",
  "outline": null,
  "output": null,
  "runElapsedTimeMs": null,
  "runStartTimestamp": null,
  "serialization": undefined,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "queued",
  "stopped": false,
}
`;

exports[`cell reducer > can run a stale cell 2`] = `
{
  "code": "mo.slider()",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [],
  "debuggerActive": false,
  "edited": false,
  "errored": false,
  "id": "1",
  "interrupted": false,
  "lastCodeRun": "mo.slider()",
  "lastExecutionTime": null,
  "lastRunStartTimestamp": null,
  "name": "_",
  "outline": null,
  "output": null,
  "runElapsedTimeMs": null,
  "runStartTimestamp": null,
  "serialization": undefined,
  "serializedEditorState": null,
  "staleInputs": true,
  "status": "queued",
  "stopped": false,
}
`;

exports[`cell reducer > can run a stopped cell 1`] = `
{
  "code": "mo.md('This has an ancestor that was stopped')",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [],
  "debuggerActive": false,
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "mo.md('This has an ancestor that was stopped')",
  "lastExecutionTime": null,
  "lastRunStartTimestamp": null,
  "name": "_",
  "outline": null,
  "output": null,
  "runElapsedTimeMs": null,
  "runStartTimestamp": null,
  "serialization": undefined,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "queued",
  "stopped": false,
}
`;

exports[`cell reducer > can run a stopped cell 2`] = `
{
  "code": "mo.md('This has an ancestor that was stopped')",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [],
  "debuggerActive": false,
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "mo.md('This has an ancestor that was stopped')",
  "lastExecutionTime": null,
  "lastRunStartTimestamp": 20,
  "name": "_",
  "outline": null,
  "output": null,
  "runElapsedTimeMs": null,
  "runStartTimestamp": null,
  "serialization": undefined,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "idle",
  "stopped": false,
}
`;

exports[`cell reducer > can run a stopped cell 3`] = `
{
  "code": "mo.md('This has an ancestor that was stopped')",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [],
  "debuggerActive": false,
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "mo.md('This has an ancestor that was stopped')",
  "lastExecutionTime": null,
  "lastRunStartTimestamp": 20,
  "name": "_",
  "outline": null,
  "output": {
    "channel": "marimo-error",
    "data": [
      {
        "msg": "This cell wasn't run because an ancestor was stopped with \`mo.stop\`: ",
        "raising_cell": "2",
        "type": "ancestor-stopped",
      },
    ],
    "mimetype": "application/vnd.marimo+error",
    "timestamp": 20,
  },
  "runElapsedTimeMs": null,
  "runStartTimestamp": null,
  "serialization": undefined,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "idle",
  "stopped": true,
}
`;

exports[`cell reducer > can run a stopped cell 4`] = `
{
  "code": "mo.md('This has an ancestor that was stopped')",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [],
  "debuggerActive": false,
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "mo.md('This has an ancestor that was stopped')",
  "lastExecutionTime": null,
  "lastRunStartTimestamp": 20,
  "name": "_",
  "outline": null,
  "output": {
    "channel": "marimo-error",
    "data": [
      {
        "msg": "This cell wasn't run because an ancestor was stopped with \`mo.stop\`: ",
        "raising_cell": "2",
        "type": "ancestor-stopped",
      },
    ],
    "mimetype": "application/vnd.marimo+error",
    "timestamp": 20,
  },
  "runElapsedTimeMs": null,
  "runStartTimestamp": null,
  "serialization": undefined,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "queued",
  "stopped": true,
}
`;

exports[`cell reducer > can run a stopped cell 5`] = `
{
  "code": "mo.md('This has an ancestor that was stopped')",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [],
  "debuggerActive": false,
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "mo.md('This has an ancestor that was stopped')",
  "lastExecutionTime": null,
  "lastRunStartTimestamp": 40,
  "name": "_",
  "outline": null,
  "output": null,
  "runElapsedTimeMs": null,
  "runStartTimestamp": 40,
  "serialization": undefined,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "running",
  "stopped": false,
}
`;

exports[`cell reducer > can run cell and receive cell messages 1`] = `
{
  "code": "",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [],
  "debuggerActive": false,
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": null,
  "lastExecutionTime": null,
  "lastRunStartTimestamp": null,
  "name": "_",
  "outline": null,
  "output": null,
  "runElapsedTimeMs": null,
  "runStartTimestamp": null,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "idle",
  "stopped": false,
}
`;

exports[`cell reducer > can run cell and receive cell messages 2`] = `
{
  "code": "import marimo as mo",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [],
  "debuggerActive": false,
  "edited": true,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": null,
  "lastExecutionTime": null,
  "lastRunStartTimestamp": null,
  "name": "_",
  "outline": null,
  "output": null,
  "runElapsedTimeMs": null,
  "runStartTimestamp": null,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "idle",
  "stopped": false,
}
`;

exports[`cell reducer > can run cell and receive cell messages 3`] = `
{
  "code": "import marimo as mo",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [],
  "debuggerActive": false,
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "import marimo as mo",
  "lastExecutionTime": null,
  "lastRunStartTimestamp": null,
  "name": "_",
  "outline": null,
  "output": null,
  "runElapsedTimeMs": null,
  "runStartTimestamp": null,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "queued",
  "stopped": false,
}
`;

exports[`cell reducer > can run cell and receive cell messages 4`] = `
{
  "code": "import marimo as mo",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [],
  "debuggerActive": false,
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "import marimo as mo",
  "lastExecutionTime": null,
  "lastRunStartTimestamp": null,
  "name": "_",
  "outline": null,
  "output": null,
  "runElapsedTimeMs": null,
  "runStartTimestamp": null,
  "serialization": undefined,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "queued",
  "stopped": false,
}
`;

exports[`cell reducer > can run cell and receive cell messages 5`] = `
{
  "code": "import marimo as mo",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [],
  "debuggerActive": false,
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "import marimo as mo",
  "lastExecutionTime": null,
  "lastRunStartTimestamp": 20,
  "name": "_",
  "outline": null,
  "output": null,
  "runElapsedTimeMs": null,
  "runStartTimestamp": 20,
  "serialization": undefined,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "running",
  "stopped": false,
}
`;

exports[`cell reducer > can run cell and receive cell messages 6`] = `
{
  "code": "import marimo as mo",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [
    {
      "channel": "stdout",
      "data": "hello!",
      "mimetype": "text/plain",
      "timestamp": 0,
    },
  ],
  "debuggerActive": false,
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "import marimo as mo",
  "lastExecutionTime": null,
  "lastRunStartTimestamp": 20,
  "name": "_",
  "outline": null,
  "output": null,
  "runElapsedTimeMs": null,
  "runStartTimestamp": 20,
  "serialization": undefined,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "running",
  "stopped": false,
}
`;

exports[`cell reducer > can run cell and receive cell messages 7`] = `
{
  "code": "import marimo as mo",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [
    {
      "channel": "stdout",
      "data": "hello!hello!",
      "mimetype": "text/plain",
      "timestamp": 0,
    },
  ],
  "debuggerActive": false,
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "import marimo as mo",
  "lastExecutionTime": null,
  "lastRunStartTimestamp": 20,
  "name": "_",
  "outline": null,
  "output": {
    "channel": "output",
    "data": "ok",
    "mimetype": "text/plain",
    "timestamp": 0,
  },
  "runElapsedTimeMs": 13000,
  "runStartTimestamp": null,
  "serialization": undefined,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "idle",
  "stopped": false,
}
`;

exports[`cell reducer > can run cell and receive cell messages 8`] = `
{
  "code": "import marimo as mo
import numpy",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [
    {
      "channel": "stdout",
      "data": "hello!hello!",
      "mimetype": "text/plain",
      "timestamp": 0,
    },
  ],
  "debuggerActive": false,
  "edited": true,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "import marimo as mo",
  "lastExecutionTime": null,
  "lastRunStartTimestamp": 20,
  "name": "_",
  "outline": null,
  "output": {
    "channel": "output",
    "data": "ok",
    "mimetype": "text/plain",
    "timestamp": 0,
  },
  "runElapsedTimeMs": 13000,
  "runStartTimestamp": null,
  "serialization": undefined,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "idle",
  "stopped": false,
}
`;

exports[`cell reducer > can run cell and receive cell messages 9`] = `
{
  "code": "import marimo as mo",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [
    {
      "channel": "stdout",
      "data": "hello!hello!",
      "mimetype": "text/plain",
      "timestamp": 0,
    },
  ],
  "debuggerActive": false,
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "import marimo as mo",
  "lastExecutionTime": null,
  "lastRunStartTimestamp": 20,
  "name": "_",
  "outline": null,
  "output": {
    "channel": "output",
    "data": "ok",
    "mimetype": "text/plain",
    "timestamp": 0,
  },
  "runElapsedTimeMs": 13000,
  "runStartTimestamp": null,
  "serialization": undefined,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "idle",
  "stopped": false,
}
`;

exports[`cell reducer > can run cell and receive cell messages 10`] = `
{
  "code": "import marimo as mo
import numpy",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [
    {
      "channel": "stdout",
      "data": "hello!hello!",
      "mimetype": "text/plain",
      "timestamp": 0,
    },
  ],
  "debuggerActive": false,
  "edited": true,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "import marimo as mo",
  "lastExecutionTime": null,
  "lastRunStartTimestamp": 20,
  "name": "_",
  "outline": null,
  "output": {
    "channel": "output",
    "data": "ok",
    "mimetype": "text/plain",
    "timestamp": 0,
  },
  "runElapsedTimeMs": 13000,
  "runStartTimestamp": null,
  "serialization": undefined,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "idle",
  "stopped": false,
}
`;

exports[`cell reducer > can run cell and receive cell messages 11`] = `
{
  "code": "import marimo as mo
import numpy",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [
    {
      "channel": "stdout",
      "data": "hello!hello!",
      "mimetype": "text/plain",
      "timestamp": 0,
    },
  ],
  "debuggerActive": false,
  "edited": false,
  "errored": true,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "import marimo as mo
import numpy",
  "lastExecutionTime": null,
  "lastRunStartTimestamp": 50,
  "name": "_",
  "outline": null,
  "output": {
    "channel": "marimo-error",
    "data": [
      {
        "exception_type": "ValueError",
        "msg": "Oh no!",
        "type": "exception",
      },
    ],
    "mimetype": "application/vnd.marimo+error",
    "timestamp": 0,
  },
  "runElapsedTimeMs": 11000,
  "runStartTimestamp": null,
  "serialization": undefined,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "idle",
  "stopped": false,
}
`;

exports[`cell reducer > can run cell and receive cell messages 12`] = `
{
  "code": "import marimo as mo
import numpy",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [
    {
      "channel": "stdout",
      "data": "hello!hello!",
      "mimetype": "text/plain",
      "timestamp": 0,
    },
  ],
  "debuggerActive": false,
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": true,
  "lastCodeRun": "import marimo as mo
import numpy",
  "lastExecutionTime": null,
  "lastRunStartTimestamp": 50,
  "name": "_",
  "outline": null,
  "output": {
    "channel": "marimo-error",
    "data": [
      {
        "type": "interruption",
      },
    ],
    "mimetype": "application/vnd.marimo+error",
    "timestamp": 0,
  },
  "runElapsedTimeMs": 11000,
  "runStartTimestamp": null,
  "serialization": undefined,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "idle",
  "stopped": false,
}
`;

exports[`cell reducer > errors reset status to idle 1`] = `
{
  "code": "",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [],
  "debuggerActive": false,
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": null,
  "lastExecutionTime": null,
  "lastRunStartTimestamp": null,
  "name": "_",
  "outline": null,
  "output": null,
  "runElapsedTimeMs": null,
  "runStartTimestamp": null,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "idle",
  "stopped": false,
}
`;

exports[`cell reducer > errors reset status to idle 2`] = `
{
  "code": "import marimo as mo",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [],
  "debuggerActive": false,
  "edited": true,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": null,
  "lastExecutionTime": null,
  "lastRunStartTimestamp": null,
  "name": "_",
  "outline": null,
  "output": null,
  "runElapsedTimeMs": null,
  "runStartTimestamp": null,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "idle",
  "stopped": false,
}
`;

exports[`cell reducer > errors reset status to idle 3`] = `
{
  "code": "import marimo as mo",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [],
  "debuggerActive": false,
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "import marimo as mo",
  "lastExecutionTime": null,
  "lastRunStartTimestamp": null,
  "name": "_",
  "outline": null,
  "output": null,
  "runElapsedTimeMs": null,
  "runStartTimestamp": null,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "queued",
  "stopped": false,
}
`;

exports[`cell reducer > errors reset status to idle 4`] = `
{
  "code": "import marimo as mo",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [],
  "debuggerActive": false,
  "edited": false,
  "errored": true,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "import marimo as mo",
  "lastExecutionTime": null,
  "lastRunStartTimestamp": null,
  "name": "_",
  "outline": null,
  "output": {
    "channel": "marimo-error",
    "data": [
      {
        "exception_type": "SyntaxError",
        "msg": "Oh no!",
        "type": "exception",
      },
    ],
    "mimetype": "application/vnd.marimo+error",
    "timestamp": 0,
  },
  "runElapsedTimeMs": null,
  "runStartTimestamp": null,
  "serialization": undefined,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "idle",
  "stopped": false,
}
`;
